--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -27,13 +27,11 @@ li {
   
   h1 {
       text-align: center;
-      text-shadow: 2px 2px #ffffff;
-  }
+  }  
   
   h2 {
       text-align: center;
-      text-shadow: 2px 2px #ffffff;
-  }
+    }
   
   .create-update-form {
     padding: 25px;
@@ -54,12 +52,11 @@ li {
       height: 100%;
   }
   body { 
-      background-image: url(http://glimpsesofcharleston.com/wp-content/uploads/2015/02/french-fries17908686_lrg.jpg) ;
       background-position: center center;
       background-repeat:  no-repeat;
       background-attachment: fixed;
       background-size:  cover;
-      background-color: #000000;  
+      background-color: #f08a8a;  
   }
   
   div, body{
@@ -67,12 +64,9 @@ li {
       padding: 0;
       font-family: exo, sans-serif;
       color: black;
+      background-color: #f08a8a
   }
-  
-  .footer {
-      text-align: center;
-      text-shadow: 1px 1px #ffffff;
-  }
+
   .wrapper {
       height: 100%; 
       width: 100%; 
