--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,12 +2,12 @@
 	
 	<div class="row">
 	    <div class="center col-sm-12">
-			<img src="../public/assets/img/burger.jpg" alt="Eat-Da-Burger App">
+			<img src="assets/img/burger.png" alt="Eat-Da-Burger App">
 	        <h1>Eat-Da-Burger App</h1>
 	        <p></p>
 	    </div>
   	</div>
-
+	<!-- end .row -->
 
 	<div class="row">
 	    <div class="col-sm-6">
@@ -51,6 +51,7 @@
 	    </div>
 
   	</div>
+	<!-- end .row -->
 
 	<div class="row">
 	    <div class="center col-sm-12">
@@ -60,16 +61,16 @@
 			<form class="create-update-form" action="/" method="POST">
 
 			  <div class="form-group">
-			    <p>Enter a burger you want to add.</p>
+			    <p>Enter a burger you want to order and click the Submit Order button.</p>
 			    <input type="text" id="ca" name="burger_name">
 			  </div>
 			  
-			  <button class="btn-primary" type="submit">Add Burger</button>
+			  <button class="btn-primary" type="submit">Submit Order</button>
 			</form>
 
 	    </div>
 	
   	</div>
-	
+	<!-- end .row -->
 
 </div>
