--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>Eat-Da-Burger</title>
+    <link rel="icon" href="assets/img/burger.ico">
+
+    <title>Eat-Da-Burger App</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     
-    <link href="/public/assets/css/burger_style.css" rel="stylesheet">
+    
+    <link href="assets/css/burger_style.css" rel="stylesheet">
   </head>
   <body>
       <div>
@@ -17,5 +19,8 @@
       {{{ body }}}
 
       </div>
+      <hr>
+ 
+
   </body>
 </html>
