--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,26 +1,18 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="assets/img/burger.ico">
+	<head>
+		<title>Eat-da-burger</title>
+		<meta charset="UTF-8">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	</head>
+	<body>
+		{{{ body }}}
 
-    <title>Eat-Da-Burger App</title>
-
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    
-    
-    <link href="assets/css/burger_style.css" rel="stylesheet">
-  </head>
-  <body>
-      <div>
-
-      {{{ body }}}
-
-      </div>
-      <hr>
- 
-
-  </body>
+	{{!-- Add in jQuery --}}
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="/assets/js/script.js"></script>
+	</body>
 </html>
